--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,10 +71,10 @@ body{
     background-color: var(--buttonBlue);
     color: var(--whiteColor);
     font-size: 16px;
+    transition: all .4s ease;
 }
 .theme_button a:hover {
-    transition: all .4s ease;
-    background-color: red;
+    transform: translateY(-5px) scale(1.05);
 }
 
 /* General Elements Responsive */
@@ -308,6 +308,12 @@ section.benefits .benefits_list .benefit_item{
     margin-right: 20px;
     transition: 0.5s;
 }
+/* section.benefits .benefits_list .benefit_item.is-active{
+    transform: scale(1.1) !important;
+} */
+/* section.benefits .benefits_list .benefit_item.is-active img{
+    margin-left: auto;
+} */
 section.benefits .benefits_list .benefit_item:last-child{
     margin-right: 0;
     margin-bottom: 0;
@@ -318,6 +324,8 @@ section.benefits .benefits_list .benefit_item:hover{
 }
 .benefit_item img.benefit_icon{
     margin-bottom: 14px;
+    transition: 0.4s;
+    display: block;
 }
 .benefit_item .benefit_title{
     margin-bottom: 15px;
@@ -325,15 +333,20 @@ section.benefits .benefits_list .benefit_item:hover{
     color: #121212;
     font-weight: 500;
     font-family: var(--fontMain);
+    pointer-events: none;
 }
 .benefit_item .benefit_text{
     font-size: 16px;
     color: #333333;
+    pointer-events: none;
 }
 
 /* Benefits Section Responsive */
 
 @media( max-width: 1024px ) {
+    section.benefits{
+        margin-bottom: 50px;
+    }
     section.benefits .benefits_list{
         display: flex;
         align-items: center;
@@ -344,5 +357,102 @@ section.benefits .benefits_list .benefit_item:hover{
         margin-bottom: 10px;
         margin-right: 0;
         width: 100%;
+    }
+}
+
+/* OUR SERVICES SECTION */
+section.our_services{
+    margin-bottom: 150px;
+}
+section.our_services .services_list{
+    margin-top: 40px;
+}
+section.our_services .services_list ul{
+    display: flex;
+    align-items: center;
+}
+section.our_services .services_list ul li {
+    height: 400px;
+    flex: 1;
+    margin-right: 20px;
+}
+section.our_services .services_list ul li:last-child{
+    margin-right: 0;
+    margin-bottom: 0;
+}
+section.our_services .services_list ul li figure{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+section.our_services .services_list ul li figure img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+section.our_services .services_list ul li figure::after{
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(16, 99, 184, 0.55);
+    z-index: 2;
+}
+section.our_services .services_list ul li .service_text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    position: relative;
+    padding: 0 30px;
+    color: #ffffff;
+    z-index: 2;
+}
+section.our_services .services_list ul li .service_text h3{
+    margin-bottom: 15px;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 500;
+    font-family: var(--fontMain);
+}in-cart
+section.our_services .services_list ul li .service_text .service_desc{
+    margin-bottom: 50px;
+    text-align: center;
+}
+section.our_services .services_list ul li .service_text .service_desc{
+    margin-bottom: 50px;
+    text-align: center;
+}
+section.our_services .services_list ul li .service_text .theme_button a.in-cart{
+    background-color: #e3dec1;
+    color: #121212;
+}
+
+@media( max-width: 1024px ) {
+    section.our_services{
+        margin-bottom: 50px;
+    }
+    section.our_services .services_list{
+        margin-top: 10px;
+    }
+    section.our_services .services_list ul{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    section.our_services .services_list ul li {
+        margin-right: 0;
+        margin-bottom: 20px;
+        flex: unset;
+    }
+    section.our_services .services_list ul li .service_text .service_desc{
+        margin-bottom: 25px;
     }
 }
